# ChangeLog for dev-python/should_dsl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Nov 2009; James Rowe <jnrowe@gmail.com> should_dsl-1.2.ebuild:
  Keyworded amd64.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> should_dsl-1.1.1.ebuild,
  should_dsl-1.2.ebuild, should_dsl-1.2.1.ebuild:
  Set SUPPORT_PYTHON_ABIS [205].

*should_dsl-1.2.1 (07 Nov 2009)

  07 Nov 2009; James Rowe <jnrowe@gmail.com> +should_dsl-1.2.1.ebuild:
  Version bump [97f].

  06 Nov 2009; James Rowe <jnrowe@gmail.com> should_dsl-1.1.1.ebuild:
  Keyworded amd64 [502].

  06 Nov 2009; James Rowe <jnrowe@gmail.com> should_dsl-1.1.1.ebuild:
  Keyworded x86 [976].

*should_dsl-1.2 (23 Oct 2009)

  23 Oct 2009; James Rowe <jnrowe@gmail.com> +should_dsl-1.2.ebuild:
  Version bump [cd7].

  14 Oct 2009; James Rowe <jnrowe@gmail.com> should_dsl-1.1.1.ebuild:
  Switch to using jnrowe-pypi eclass.

  06 Oct 2009; James Rowe <jnrowe@gmail.com> -should_dsl-1.1.ebuild:
  Removing obsolete ebuild.

*should_dsl-1.1.1 (06 Oct 2009)

  06 Oct 2009; James Rowe <jnrowe@gmail.com> +should_dsl-1.1.1.ebuild:
  Version bump

  02 Oct 2009; James Rowe <jnrowe@gmail.com> should_dsl-1.1.ebuild:
  Keyworded ~x86.

*should_dsl-1.1 (02 Oct 2009)

  02 Oct 2009; James Rowe <jnrowe@gmail.com> +should_dsl-1.1.ebuild,
  +metadata.xml:
  Initial ebuild, by me. Required by dev-python/pyhistorian.
