@@ -1,18 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST should_dsl-1.1.1.tar.gz 4777 RMD160 908ba50bb90a4520d97dab41a85334861261879e SHA1 b3a36a1341141d5127be039382aa2db431b482a3 SHA256 5861f6de0049bb09ad2fdba16cf7a3ff7df019c113332614801b1ee5230c06fa
 DIST should_dsl-1.2.1.tar.gz 8868 RMD160 7feff3a4a122e93cf5956ee3ba1894f9a5c95513 SHA1 857ff70dc7fc7bdd194789ac546ed0ae6a363db4 SHA256 7b880260f99232cb73a07d371af4d294d7f15e0f1286254d0870d193b55007a4
 DIST should_dsl-1.2.tar.gz 7792 RMD160 9dbe747cb559d30e5fffeb029a921b5fb017d083 SHA1 357790790d46a0ef8b9bebfa175dac0c91b09be0 SHA256 cf63376fa3478e475a5e6bf89f9c46a422780389757b5d6992286b74bcd840fe
-EBUILD should_dsl-1.1.1.ebuild 395 RMD160 a84b6a806e86006b30b57bd47383ea13d8a677cd SHA1 5fc19b6756d1770a59016cab8b2620193be6a80d SHA256 9b70eaa73d4d2fc81a0e8cb5a970ada1553532149e6f1b7f7818f5b5ede54f37
 EBUILD should_dsl-1.2.1.ebuild 397 RMD160 604ed914593ee2501041adbf7b90e41447cd15c8 SHA1 fe678db1c3223ffecee1190b77940d3bf789cf42 SHA256 430abb782c3c7d7e7b1002379c334adf302bc5a91bc441a09e9f57ce83084825
-EBUILD should_dsl-1.2.ebuild 396 RMD160 a2f49a9016db8b11ff3f129d3f386077b379f16e SHA1 4dc39877b48d7172b4c9457380210cbdb160e89e SHA256 1598bb159dc936202f8b161eb095b533330fda9899dc66a30f0cf93a4fbe17bd
-MISC ChangeLog 1397 RMD160 3a03a4ce95ddffea59424092ab31daf4582f1b96 SHA1 4c8ab0bd00f80c529509e0f4cfab75a7f61cdc1b SHA256 b159db2bb51c1f905d28576fcd12d7f8064f605be2de756c0fb322239f47f584
+EBUILD should_dsl-1.2.ebuild 395 RMD160 a84b6a806e86006b30b57bd47383ea13d8a677cd SHA1 5fc19b6756d1770a59016cab8b2620193be6a80d SHA256 9b70eaa73d4d2fc81a0e8cb5a970ada1553532149e6f1b7f7818f5b5ede54f37
+MISC ChangeLog 1511 RMD160 ebf380c2e5b1fb6cac6d26ad4d6bca37f87d64ed SHA1 7df5ba5dfa3bad79f4c1fa1e9fbc8e9d00a35d0a SHA256 87482cce8e05b2d5588be9fb620f39d685178362eb22eacebd42a3075f59e4d2
 MISC metadata.xml 404 RMD160 ca2e5323da3f9ffbf94d75ad2bbe6ac78aa415e9 SHA1 5173cdd6f6f0a46f0513fc6767969a297714ad72 SHA256 6eb0a59af9631fd0ba1e50f7a6b7bec9e17dd7d1483d5ab560f1ab07036c3f51
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAksJBe0ACgkQzJrj3cAXR0kBqwCcCkyio0qKD7J10KC/KsWRjInu
-+csAn1nNBFcoE9Dn697P/ipc9c59n7tA
-=oY/+
+iEYEARECAAYFAksJBoEACgkQzJrj3cAXR0mIVwCgjbgCZ/ukqqE3zeCX+27AUnTO
+MjMAniMG+Rb6qqJnHgx+hRHHiNIID2Ku
+=Du48
 -----END PGP SIGNATURE-----
