@@ -1,19 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-EAPI="2"
-SUPPORT_PYTHON_ABIS="1"
-
-inherit jnrowe-pypi
-
-DESCRIPTION="Should assertions in Python as clear and readable as possible"
-HOMEPAGE="http://github.com/hugobr/should-dsl"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="amd64 x86"
-IUSE=""
-
-DEPEND="dev-python/setuptools"
-RDEPEND=""
