@@ -12,7 +12,7 @@ HOMEPAGE="http://github.com/hugobr/should-dsl"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND="dev-python/setuptools"
