@@ -1,22 +1,0 @@
-dev-python/setuptools >=app-admin/eselect-python-20090804 >=app-shells/bash-3.2 virtual/python
-virtual/python
-0
-http://pypi.python.org/packages/source/s/should_dsl/should_dsl-1.1.1.tar.gz
-
-http://github.com/hugobr/should-dsl
-MIT
-Should assertions in Python as clear and readable as possible
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-
-
-
-
-2
-
-compile install postinst postrm prepare unpack
-
-
-
-
-
