@@ -6,7 +6,7 @@ http://pypi.python.org/packages/source/s/should_dsl/should_dsl-1.2.tar.gz
 http://github.com/hugobr/should-dsl
 MIT
 Should assertions in Python as clear and readable as possible
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 
 
