@@ -1,4 +1,3 @@
-REM 2009-11-22 +1 MSG Stabilise x86 dev-python/should_dsl-1.2 %a
 REM 2009-11-26 +1 MSG Stabilise amd64 x11-plugins/vicious-1.0.18 %a
 REM 2009-11-26 +1 MSG Stabilise x86 x11-plugins/vicious-1.0.18 %a
 REM 2009-12-01 +1 REM Stabilise x86 dev-util/geany-plugins-0.17.1 %a
