@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Nov 2009; James Rowe <jnrowe@gmail.com> -should_dsl-1.1.1.ebuild,
+  should_dsl-1.2.ebuild:
+  Keyworded x86.
+
   22 Nov 2009; James Rowe <jnrowe@gmail.com> should_dsl-1.2.ebuild:
   Keyworded amd64.
 
